Fixed footer not wrapping correctly

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -314,7 +314,7 @@ footer {
     				justify-content: space-around;
     				align-items: center;
 					img {
-						height: 24vh;
+						height: 16vh;
 					}
 				}
 			}
@@ -323,7 +323,7 @@ footer {
 }
 
 /*responsive*/
-@media (max-width: 992px) {
+@media (max-width: 992px) and (min-width: 574.02px) {
 	main div.container div.card {
 		margin: 2rem 0;
 		padding: .5rem;
@@ -347,6 +347,9 @@ footer {
 	footer div.container div.row div.footer-col {
 		width: 50%;
 		margin-bottom: 30px;
+		&.alt {
+			width: 50%;
+		}
 	}
 }
 @media (max-width: 574px) {
